--- a/HTML/Forms/index.html
+++ b/HTML/Forms/index.html
@@ -2,6 +2,16 @@
 <html>
 <head>
 	<title>HTML Forms</title>
+	<style type="text/css">
+		table
+		{
+			background-color: pink;
+		}
+		input, textarea
+		{
+			font-family: Arial;
+		}
+	</style>
 </head>
 <body>
 <fieldset>
